<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_theme_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category_theme_24dp"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_found"
        android:icon="@drawable/ic_found_theme_24dp"
        android:title="@string/title_found" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_shopping_cart_theme_24dp"
        android:title="@string/title_shopping_cart" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine_theme_24dp"
        android:title="@string/title_mine" />

</menu>