<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zcq.learning.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.zcq.learning.fragment.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_found"
        android:name="com.zcq.learning.fragment.FoundFragment"
        android:label="@string/title_found"
        tools:layout="@layout/fragment_found" />

    <fragment
        android:id="@+id/navigation_shopping_cart"
        android:name="com.zcq.learning.fragment.ShoppingCartFragment"
        android:label="@string/title_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.zcq.learning.fragment.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>